feat: 입력 요구 사항 구현

--- a/기능요구사항.md
+++ b/기능요구사항.md
@@ -2,14 +2,14 @@
 
 ## 필요한 기능
 
-### 입력 기능 InputView
+### 입력 기능 InputView[v]
 
 - 비상근무 배정 월, 시작 요일 입력받기
 - 근무 순법 입력받기
     - 평일 비상근무 순번 사원대로 닉네임 입력받기
     - 휴일 비상근무 순번 사원대로 닉네임 입력받기
 
-### 입력 유효성 검사 기능 InputValidator
+### 입력 유효성 검사 기능 InputValidator[v]
 
 - 에러는 [ERROR] 로 시작하도록 한다
 - 월은 1~12, 시작 요일은 일월화수목금토 중 하나
@@ -29,7 +29,7 @@
 
 - 2월은 28일까지 있음
 
-#### 월 달력 생성 필요 CalendarGenerator
+#### 월 달력 생성 필요 CalendarGenerator[v]
 
 - 해당 월의 시작요일을 입력받는다. 입력받은 요일이 1일의 요일인 거다.
 - 따라서 1월이면 1~31일까지 생성, 4월이면 1~30일까지 생성해야 함.
