docs: 알고리즘 아이디어 설명 추가

--- a/src/기능요구사항.md
+++ b/src/기능요구사항.md
@@ -31,6 +31,13 @@
 
 #### OnCallMonthGenerator
 
+#### 알고리즘 아이디어
+
+- 공휴일 + 평일이면 -> 평일 근로자에서 대체하고
+- 평일 + 공휴일이면 -> 공휴일에서 대체하는거니까
+- 뒤에 오는 것만 바꾸면
+- prev, cur -> 같으면, 그 뒤에걸 cur로 넣고, 이미 뺀 근로자는 다시 그 앞에 추가.. 큐를 상상했습니다
+
 -입력받은 월, 해당 월의 1일의 요일을 기반으로 달력 생성해주는 객체
 -그 반환값이 OnCallWorkSchedule의 초기값이 된다
 
